Implemented auth to portal

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -17,7 +17,9 @@
     {{> header}}
     {{> demobanner}}
     <main class="govuk-main-wrapper " id="main-content" role="main">
+        <div class="govuk-width-container">
         {{{body}}}
+        </div>
     </main>
     {{> footer}}
   <script src="/govuk-frontend/all.js"></script>
