--- a/views/portal.hbs
+++ b/views/portal.hbs
@@ -36,6 +36,18 @@
             </svg>
             </a>
         </div>
+        {{#if user.isEntity}}
+        <div class="govuk-grid-column-full">
+            <h1 class="govuk-heading-m">Delegate Authority</h1>
+            <p class="govuk-body">Grant agents authority to act on your behalf.</p>
+            <a href="/delegateAuthority" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+            Start now
+            <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
+                <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+            </svg>
+            </a>
+        </div>
+        {{/if}}
         <div class="govuk-grid-column-full">
             <h1 class="govuk-heading-m">Logout</h1>
             <p class="govuk-body">
