--- a/views/portal.hbs
+++ b/views/portal.hbs
@@ -27,8 +27,8 @@
             </a>
         </div>
         <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-m">Account activity</h1>
-            <p class="govuk-body">Review activity on your account.</p>
+            <h1 class="govuk-heading-m">Review account activity</h1>
+            <p class="govuk-body">Review recent actions on your account.</p>
             <a href="/accountactivity" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
             Start now
             <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
@@ -38,9 +38,21 @@
         </div>
         {{#if user.isEntity}}
         <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-m">Delegate Authority</h1>
+            <h1 class="govuk-heading-m">Delegate authority</h1>
             <p class="govuk-body">Grant agents authority to act on your behalf.</p>
             <a href="/delegateAuthority" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+            Start now
+            <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
+                <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+            </svg>
+            </a>
+        </div>
+        {{else}}
+        <div class="govuk-grid-column-full">
+            <h1 class="govuk-heading-m">Exercise authority</h1>
+            <p class="govuk-body">Restablish this session with the context of an
+            entity which has granted authority.</p>
+            <a href="/authority" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
             Start now
             <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
                 <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
