--- a/views/tokens.hbs
+++ b/views/tokens.hbs
@@ -33,7 +33,7 @@
                 Refresh Token
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <pre>{{jwt refresh_token}}</pre>
+                    <pre>{{refresh_token}}</pre>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                 </dd>
