Fixing typo on landing page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,7 +32,7 @@
         <h2 class="">Centers for Medicare and Medicaid</h2>
       </div>
       <div class="govuk-grid-column-one-third">
-        <h2 class="">U.S. Department of Veterns Affairs</h2>
+        <h2 class="">U.S. Department of Veterans Affairs</h2>
       </div>
       <div class="govuk-grid-column-one-third">
         <h2 class="">American Federation of Government Employees</h2>
