Better handling for Okta as a TOTP provider

--- a/views/factorChallenge.hbs
+++ b/views/factorChallenge.hbs
@@ -13,7 +13,7 @@
             </label>
             {{#if totp}}
             <span id="password-hint" class="govuk-hint">
-            Please enter the one time code from your authenticator application.
+            Please enter the one time code from your {{challengeProvider}} authenticator application.
             </span>
             {{else}}
             <span id="password-hint" class="govuk-hint">
