Join users to MFA group if their password is in HIBP

--- a/views/mfaenroll.hbs
+++ b/views/mfaenroll.hbs
@@ -6,10 +6,8 @@
         </h1>
         <div class="govuk-panel__body">
             MFA enrollment has not been implemented in this demo but is required
-            to proceed with login.<br/>
-            Use the hosted page below to complete enrollment.
+            to proceed with login.
         </div>
-        <a class="govuk-link" href="{{tenant}}">Go to hosted page</a>
         </div>
     </div>
 </div>
