Present the user with the number of dumps containing their password

--- a/views/factorChallenge.hbs
+++ b/views/factorChallenge.hbs
@@ -7,19 +7,19 @@
             Identity Verification
             </h1>
         </legend>
-        {{#if hibp}}
+        {{#ifCond hibp '>' 0}}
         <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            Your password has been found in leaked credentials from other
+            Your password has been found in leaked credentials from {{hibp}} other
             services. 
              <br>
             Please change your password. To keep your account secure until 
             you do, you must complete an additional factor challenge to access this service. 
         </strong>
         </div>
-        {{/if}}
+        {{/ifCond}}
         <div class="govuk-form-group">
             <label class="govuk-label" for="password">
                 One time code
