--- a/views/partials/demobanner.hbs
+++ b/views/partials/demobanner.hbs
@@ -5,7 +5,7 @@
             DEMO
             </strong>
             <span class="govuk-phase-banner__text">
-            This is an identity management demonstration service provide by <a href="https://okta.com">Okta.</a>
+            This is an identity management demonstration service provided by <a href="https://okta.com">Okta.</a>
             </span>
         </p>
     </div>
