--- a/views/portal.hbs
+++ b/views/portal.hbs
@@ -19,7 +19,7 @@
     <div class="govuk-grid-column-full">
             <h1 class="govuk-heading-m">View your tokens</h1>
             <p class="govuk-body">Decode the tokens which have been provided by
-            the IDP to describe you and your access..</p>
+            the IDP to describe you and your access.</p>
             <a href="/yourtokens" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
             Start now
             <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
