Implemented public registration

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -46,8 +46,10 @@
             <span class="govuk-visually-hidden">Error:</span> {{err}}
         </span>
         {{/if}}
-        </div>
+        
         </fieldset>
         </form>
-
+        <h2 class="govuk-heading-m">Create an account</h2>
+        <p class="govuk-body">You can create an account for this service <a class="govuk-link" href="/register">here</a>.</p>
+        </div>
 </div>
