Implemented update of user name info

--- a/views/yourinfo.hbs
+++ b/views/yourinfo.hbs
@@ -12,6 +12,9 @@
             {{name}}
             </dd>
             <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="/yourinfo/update-name">
+                    Change<span class="govuk-visually-hidden"> name</span>
+                </a>
             </dd>
         </div>
         <div class="govuk-summary-list__row">
