--- a/views/yourinfo.hbs
+++ b/views/yourinfo.hbs
@@ -19,6 +19,19 @@
         </div>
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
+            Address
+            </dt>
+            <dd class="govuk-summary-list__value">
+            {{address}}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="/yourinfo/update-address">
+                    Change<span class="govuk-visually-hidden"> address</span>
+                </a>
+            </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
             Date of birth
             </dt>
             <dd class="govuk-summary-list__value">
