--- a/views/portal.hbs
+++ b/views/portal.hbs
@@ -32,6 +32,14 @@
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
         </svg>
         </a>
+        <h1 class="govuk-heading-m">Verify your identity</h1>
+        <p class="govuk-body">Provide documentation to verify your identity.</p>
+        <a href="/identityVerification" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+        Start now
+        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+        </svg>
+        </a>
         <h1 class="govuk-heading-m">Review account activity</h1>
         <p class="govuk-body">Review recent actions on your account.</p>
         <a href="/accountactivity" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
