Cleaning up success message

--- a/views/identityVerification-checkSubmitSuccess.hbs
+++ b/views/identityVerification-checkSubmitSuccess.hbs
@@ -5,8 +5,8 @@
             Identity Verification Completed
         </h1>
         <div class="govuk-panel__body">
-            <p class="govuk-body">Your request for identity verification was proccesed.</p>
-            <p class="govuk-body">The result was:<br/><b>{{check.result}}</b></p>
+            <p>Your request for identity verification was proccesed.</p>
+            <p>The result was:<br/><strong>{{check.result}}</strong></p>
         </div>
         </div>
 
