--- a/views/portal.hbs
+++ b/views/portal.hbs
@@ -48,6 +48,14 @@
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
         </svg>
         </a>
+        <h1 class="govuk-heading-m">Manage tickets</h1>
+        <p class="govuk-body">Create and update service tickets.</p>
+        <a href="/tickets" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+        Start now
+        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+        </svg>
+        </a>
         <h1 class="govuk-heading-m">Manage delegated authority</h1>
         <p class="govuk-body">Grant agents authority to act on your behalf.</p>
         <a href="/delegateAuthority" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
